--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
     "@reach/router": "^1.3.4",
     "bootstrap": "^4.5.3",
     "core-js": "^3.8.0",
+    "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
+    "react-moment": "^1.0.0",
     "styled-components": "^5.2.1"
   },
   "browserslist": "> 0.25%, not dead,not ie 11"
