--- a/package.json
+++ b/package.json
@@ -25,8 +25,15 @@
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
+    "eslint": "^7.16.0",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.3.0",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.0",
+    "prettier": "^2.2.1",
     "style-loader": "^2.0.0",
     "webpack": "^5.9.0",
     "webpack-cli": "^4.2.0",
@@ -34,6 +41,7 @@
   },
   "dependencies": {
     "@reach/router": "^1.3.4",
+    "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
     "core-js": "^3.8.0",
     "moment": "^2.29.1",
