--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
     "core-js": "^3.8.0",
+    "firebase": "^8.2.2",
     "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
